# polycode

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: ROADMAP.md  adapter-matrix.md  tos-analysis.md
src/: cli.rs  commands.rs  error.rs  journal.rs  main.rs  orchestrator.rs  quota.rs  router.rs
src/adapter/: aider.rs  claude.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
