[package]
name = "polycode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI router for multiple AI coding assistants with intelligent routing and quota fallback"
repository = "https://github.com/Yoloholoknow/polycode"
keywords = ["ai", "cli", "claude", "codex", "routing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "polycode"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }

# Async runtime + subprocess
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "io-util"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
